--- a/Tareas/Tarea1/lab5/src/main/resources/templates/editPersona.html
+++ b/Tareas/Tarea1/lab5/src/main/resources/templates/editPersona.html
@@ -1,14 +1,11 @@
 <!doctype html>
 <html lang="en-US" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8"></meta>
-    <meta http-equiv="Content-Type" content="text/html"></meta>
-    <title>Spring Boot Persona</title>
+    <title>Editar persona</title>
 </head>
 <body>
-<h1>Insertar persona</h1>
-
-<form action="#" th:action="@{/templatePersona}" th:object="${persona}" method="post">
+<h1>Editar</h1>
+<form action="#" th:action="@{/editarPersona/{id}(id=${id})}" th:object="${personaToEdit}" method="post">
     <label for="nombre">Nombre</label>
     <input type="text" th:field="*{nombre}"  id="nombre"/>
     <label for="apellido1">Primer apellido</label>
@@ -19,8 +16,7 @@
     <textarea id="direccion" th:field="*{direccion}" rows="4" cols="50"></textarea>
     <label for="fechaNacimiento">Fecha de nacimiento</label>
     <input type="text" th:field="*{fechaNacimiento}"  id="fechaNacimiento"/>
-    <input type="submit" value="Agregar persona">
+    <input type="submit" value="Actualizar persona">
 </form>
-
 </body>
 </html>
