--- a/Examenes/examen2/templates/templateCopy/template/pages/registroAuditores.html
+++ b/Examenes/examen2/templates/templateCopy/template/pages/registroAuditores.html
@@ -133,64 +133,131 @@
                 <div>
                   <h4 class="font-weight-bold mb-0">Servicio de auditorias</h4>
                 </div>
-                <a href=""  class="btn btn-dark btn-lg btn-block">Registrar auditor</a>
-                
                 
               </div>
             </div>
           </div>
           <!-- CONTENT -->
-          <div class="col-lg-6 grid-margin stretch-card">
+          <div class="col-12 grid-margin">
             <div class="card">
               <div class="card-body">
-                <h4 class="card-title">Hoverable Table</h4>
-                <p class="card-description">
-                  Add class <code>.table-hover</code>
-                </p>
-                <div class="table-responsive">
-                  <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th>User</th>
-                        <th>Product</th>
-                        <th>Sale</th>
-                        <th>Status</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>Jacob</td>
-                        <td>Photoshop</td>
-                        <td class="text-danger"> 28.76% <i class="ti-arrow-down"></i></td>
-                        <td><label class="badge badge-danger">Pending</label></td>
-                      </tr>
-                      <tr>
-                        <td>Messsy</td>
-                        <td>Flash</td>
-                        <td class="text-danger"> 21.06% <i class="ti-arrow-down"></i></td>
-                        <td><label class="badge badge-warning">In progress</label></td>
-                      </tr>
-                      <tr>
-                        <td>John</td>
-                        <td>Premier</td>
-                        <td class="text-danger"> 35.00% <i class="ti-arrow-down"></i></td>
-                        <td><label class="badge badge-info">Fixed</label></td>
-                      </tr>
-                      <tr>
-                        <td>Peter</td>
-                        <td>After effects</td>
-                        <td class="text-success"> 82.00% <i class="ti-arrow-up"></i></td>
-                        <td><label class="badge badge-success">Completed</label></td>
-                      </tr>
-                      <tr>
-                        <td>Dave</td>
-                        <td>53275535</td>
-                        <td class="text-success"> 98.05% <i class="ti-arrow-up"></i></td>
-                        <td><label class="badge badge-warning">In progress</label></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
+                <h4 class="card-title">Registrar auditor</h4>
+                <form class="form-sample">
+                  <p class="card-description">
+                    Informacion personal
+                  </p>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Nombre</label>
+                        <div class="col-sm-9">
+                          <input type="text" class="form-control" />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Primer apellido</label>
+                        <div class="col-sm-9">
+                          <input type="text" class="form-control" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Segundo apellido</label>
+                        <div class="col-sm-9">
+                          <input type="text" class="form-control" />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Correo electrónico</label>
+                        <div class="col-sm-9">
+                          <input type="text" class="form-control" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Teléfono</label>
+                        <div class="col-sm-9">
+                          <input type="text" class="form-control"/>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Fecha de nacimiento</label>
+                        <div class="col-sm-9">
+                          <input class="form-control" placeholder="dd/mm/yyyy"/>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Disponibilidad para viajar</label>
+                        <div class="col-sm-9">
+                          <select class="form-control">
+                            <option>Sí</option>
+                            <option>No</option>
+                            
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Especialidad</label>
+                        <div class="col-sm-9">
+                          <select class="form-control">
+                            <option>Calidad</option>
+                            <option>Procesos</option>
+                            <option>Salubridad</option>
+                            <option>Seguridad Laboral</option>
+                            <option>Seguridad de TI</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group row">
+                        <label class="col-sm-3 col-form-label">Estado</label>
+                        <div class="col-sm-9">
+                          <select class="form-control">
+                            <option>Activo</option>
+                            <option>Inactivo</option>
+                            
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                   
+                   
+                    
+                  </div>
+                  <div class="row">
+                    
+                    <div class="col-md-6">
+                      <button type="submit" class="btn btn-primary me-2">Submit</button>
+                      <button class="btn btn-light">Cancel</button>
+                    </div>
+                   
+                    
+                  </div>
+                  
+                 
+                </form>
               </div>
             </div>
           </div>
