--- a/Examenes/examen2/examen/src/main/resources/templates/index.html
+++ b/Examenes/examen2/examen/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-            <a class="navbar-brand  " href="index.html">Servicio Auditorias</a>
+            <a class="navbar-brand  " href="/">Servicio Auditorias</a>
 
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
@@ -55,7 +55,7 @@
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="/">
                         <i class="ti-shield menu-icon"></i>
                         <span class="menu-title">Servicios</span>
                     </a>
@@ -138,40 +138,38 @@
                     <div class="col-md-3 grid-margin stretch-card">
                         <div class="card">
                             <a href="/listadoAuditores" style="text-decoration: none; color: black;"><div class="card-body" style="cursor: pointer">
-                                <p class="card-title text-md-center text-xl-left">Sales</p>
+                                <p class="card-title text-md-center text-xl-left">Listado</p>
                                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
-                                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">34040</h3>
+                                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">Auditores</h3>
                                     <i class="ti-calendar icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
                                 </div>
-                                <p class="mb-0 mt-2 text-danger">0.12% <span class="text-black ms-1"><small>(30 days)</small></span></p>
                             </div></a>
 
                         </div>
                     </div>
                     <div class="col-md-3 grid-margin stretch-card">
                         <div class="card">
-                            <div class="card-body">
-                                <p class="card-title text-md-center text-xl-left">Revenue</p>
+                            <a href="/listadoClientes" style="text-decoration: none; color: black;"><div class="card-body" style="cursor: pointer">
+                                <p class="card-title text-md-center text-xl-left">Listado</p>
                                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
-                                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">47033</h3>
+                                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">Clientes</h3>
                                     <i class="ti-user icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
                                 </div>
-                                <p class="mb-0 mt-2 text-danger">0.47% <span class="text-black ms-1"><small>(30 days)</small></span></p>
-                            </div>
+                            </div></a>
+
                         </div>
                     </div>
-                    <div class="col-md-3 grid-margin stretch-card">
-                        <div class="card">
-                            <div class="card-body">
-                                <p class="card-title text-md-center text-xl-left">Downloads</p>
-                                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
-                                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">40016</h3>
-                                    <i class="ti-agenda icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
-                                </div>
-                                <p class="mb-0 mt-2 text-success">64.00%<span class="text-black ms-1"><small>(30 days)</small></span></p>
-                            </div>
-                        </div>
-                    </div>
+<!--                    <div class="col-md-3 grid-margin stretch-card">-->
+<!--                        <div class="card">-->
+<!--                            <a href="/listadoPersonas" style="text-decoration: none; color: black;"><div class="card-body" style="cursor: pointer">-->
+<!--                                <p class="card-title text-md-center text-xl-left">Listado</p>-->
+<!--                                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">-->
+<!--                                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">Personas de Contacto</h3>-->
+<!--                                    <i class="ti-user icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>-->
+<!--                                </div>-->
+<!--                            </div></a>-->
+<!--                        </div>-->
+<!--                    </div>-->
                     <div class="col-md-3 grid-margin stretch-card">
                         <div class="card">
                             <div class="card-body">
